[package]
name = "deposit-graph"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-web = "4.3"
anyhow = "1.0"
dotenv = "0.15"
ethers = { version = "2.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = "0.4.38"
fastrand = "2.1.0"
